--- a/app.json
+++ b/app.json
@@ -17,7 +17,9 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.timenoir"
+      "package": "com.anonymous.timenoir",
+      "softwareKeyboardLayoutMode": "pan"
+      
     },
     "web": {
       "bundler": "metro",
